Linked the css reset file to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>CSS In 44 Minutes</title>
+        <link rel="stylesheet" type="text/css" href="css/minireset.min.css">
     </head>
     <body>
         <h1>Hello, World!</h1>
