--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>CSS In 44 Minutes</title>
         <link rel="stylesheet" type="text/css" href="css/minireset.min.css">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
     <body>
         <h1>Hello, World!</h1>
