Added the content in the webpage : text and image

--- a/index.html
+++ b/index.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>CSS In 44 Minutes</title>
-        <link rel="stylesheet" type="text/css" href="css/minireset.min.css">
-        <link rel="stylesheet" type="text/css" href="css/main.css">
-    </head>
-    <body>
-        <h1>Hello, World!</h1>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>CSS In 44 Minutes</title>
+    <link rel="stylesheet" type="text/css" href="css/minireset.min.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+</head>
+
+<body>
+    <div class="wallpaper"></div>
+    <div class="content">
+        <aside class="side">
+            <figure class="picture">
+                <div class="picture-shadow"></div>
+                <img id="pictureImage" class="picutre-image" src="images/sans.jpg" alt="sans Profile" width="320">
+            </figure>
+        </aside>
+        <main class="about">
+            <h1>Hi, I'm 010101-sans</h1>
+            <p class="job">Software Developer</p>
+            <hr class="hr">
+            <div class="description">
+                <p> 
+                    I spend my time wactching anime, reading manga, and developing softwares.
+                </p>
+            </div>
+            <div class="contact">
+                <a class="button" href="mailto:sanskarsuryawanshi123@gmail.com">Get in touch</a>
+            </div>
+        </main>
+    </div>
+</body>
+
 </html>
