Removed href link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </p>
             </div>
             <div class="contact">
-                <a class="button" href="mailto:sanskarsuryawanshi123@gmail.com">Get in touch</a>
+                <a class="button" href="">Get in touch</a>
             </div>
         </main>
     </div>
