Updated profile description

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <hr class="hr">
             <div class="description">
                 <p> 
-                    I spend my time wactching anime, reading manga, and developing softwares.
+                    I like finding problems, so I can build solftwares to solve them.
                 </p>
             </div>
             <div class="contact">
