Fixed a small naming error, that was causing a big issue

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <aside class="side">
             <figure class="picture">
                 <div class="picture-shadow"></div>
-                <img id="pictureImage" class="picutre-image" src="images/sans.jpg" alt="sans Profile" width="320">
+                <img id="pictureImage" class="picture-image" src="images/sans.jpg" alt="sans Profile" width="320">
             </figure>
         </aside>
         <main class="about">
@@ -26,7 +26,7 @@
             <p class="job">Software Developer</p>
             <hr class="hr">
             <div class="description">
-                <p> 
+                <p>
                     I like finding problems, so I can build solftwares to solve them.
                 </p>
             </div>
