--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Quicksand" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/minireset.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
 </head>
 
 <body>
@@ -33,6 +34,23 @@
             <div class="contact">
                 <a class="button" href="">Get in touch</a>
             </div>
+            <ul class="social">
+                <li>
+                    <a>
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <i class="fab fa-github"></i>
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                </li>
+            </ul>
         </main>
     </div>
 </body>
