corrected grammatical mistake, and updated css colors of hr and job

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <hr class="hr">
             <div class="description">
                 <p>
-                    I like finding problems, so I can build solftwares to solve them.
+                    I like finding problems, so I can build softwares to solve them.
                 </p>
             </div>
             <div class="contact">
