--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
     <link rel="stylesheet" type="text/css" href="css/minireset.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/animations.css">
+    <script defer type="text/javascript" src="js/main.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
 </head>
 
 <body>
-    <div class="wallpaper"></div>
+    <div class="wallpaper" id="wallpaper" data-image="images/wallpaper.jpg"></div>
     <div class="content">
         <aside class="side">
-            <figure class="picture">
+            <figure class="picture" id="picture">
                 <div class="picture-shadow"></div>
                 <img id="pictureImage" class="picture-image" src="images/sans.jpg" alt="sans Profile" width="320">
             </figure>
@@ -54,6 +55,17 @@
             </ul>
         </main>
     </div>
+    <noscript>
+        <style type="text/css">
+            .wallpaper {
+                animation-name: zoomOut;
+            }
+
+            .picture {
+                animation-name: dropIn;
+            }
+        </style>
+    </noscript>
 </body>
 
 </html>
